style: fixed overlay z-index

--- a/src/components/cards/TimeDealCard/index.module.css
+++ b/src/components/cards/TimeDealCard/index.module.css
@@ -84,7 +84,7 @@
   border-radius: 1rem;
   font-size: large;
   font-weight: bold;
-  z-index: 999;
+  z-index: 700;
 }
 
 .overlay__text {
